--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@bitbloq/types": "file:../types",
     "@google-cloud/storage": "^2.4.3",
     "@nestjs/common": "^5.7.4",
     "@nestjs/core": "^5.7.4",
