--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,6 +21,7 @@
     }
   ],
   "dependencies": {
+    "@bitbloq/types": "^0.0.0",
     "@bitbloq/3d": "^0.1.3",
     "@bitbloq/bloqs": "^0.1.3",
     "@bitbloq/junior": "^0.1.3",
